# k7s

./: Cargo.toml  README.md  sonar-project.properties
.github/workflows/: check-and-lint.yaml  pulish_tags_to_crates_io.yaml  release.yml
src/: app.rs  describe_resources.rs  lib.rs  main.rs  resources.rs  ui.rs
