[package]
name = "k7s"
version = "0.7.0"
edition = "2021"
authors = ["Marcin Bielak <marcin.bieli+k7sgithub@gmail.com>"]
description = "Great terminal UI for kubernetes."
repository = "https://github.com/bieli/k7s"
homepage = "https://github.com/bieli/k7s"
license = "Apache-2.0"
keywords = ["k8s", "app", "kubernetes", "client"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }

kube = { version = "0.88", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["latest"] }

futures = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

